# rusty-exercise

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  README.md  compose.yml
migrations/2024-04-06-144503_create_users/: up.sql
migrations/2024-04-09-133747_create_user/: down.sql  up.sql
src/: auth.rs  config.rs  lib.rs  main.rs  messages.rs  models.rs  schema.rs  settings.rs  startup.rs  telemetry.rs
src/api/: login.rs  mod.rs  register.rs  users.rs
src/config/: default.toml
src/helpers/: error.rs  mod.rs
src/repository/: mod.rs  user.rs
src/services/: mod.rs  signup.rs  users.rs
src/types/: email.rs  mod.rs  name.rs  password.rs  pool.rs
src/types/api/: request.rs  response.rs
src/types/models/: mod.rs  user.rs
