[package]
name = "rusty_exercise"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.0"
diesel = { version = "2.1.5", features = ["postgres", "r2d2"] }
dotenv = "0.15"
r2d2 = "0.8.10"
bcrypt = "0.15.1"