[package]
name = "rusty_exercise"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.0"
diesel = { version = "2.1.5", features = ["postgres", "r2d2",  "chrono"] }
dotenvy = "0.15"
r2d2 = "0.8.10"
anyhow = "1.0.40"
reqwest = "0.12.3"
config = { version = "0.14.0", default-features = false, features = ["toml"] }
chrono = { version = "0.4.26", default-features = false, features = ["clock"] }
thiserror = "1.0.44"
rand = "0.8.5"
argon2 = "0.5.0"
validator = "0.18.0"
unicode-segmentation = "1.10.1"
secrecy = { version = "0.8.0", features = ["serde"] }
serde = { version = "1.0.171", features = ["derive"] }
serde_json = "1.0.103"
uuid = { version = "1.8.0", features = ["v4", "serde"] }
actix-session = "0.9.0"

[dev-dependencies]
claims = "0.7.1"
fake = "2.6.1"
quickcheck = "1.0.3"
quickcheck_macros = "1.0.0"
