[package]
name = "rusty_exercise"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.0"
actix = "0.13.3"
diesel = { version = "2.1.5", features = ["postgres", "r2d2",  "chrono", "uuid"] }
r2d2 = "0.8.10"
anyhow = "1.0.40"
reqwest = "0.12.3"
chrono = { version = "0.4.26", default-features = false, features = ["clock"] }
thiserror = "1.0.44"
rand = "0.8.5"
argon2 = "0.5.0"
validator = "0.18.0"
unicode-segmentation = "1.10.1"
secrecy = { version = "0.8.0", features = ["serde"] }
serde = { version = "1.0.171", features = ["derive"] }
serde_json = "1.0.103"
uuid = { version = "1.8.0", features = ["v4", "serde"] }
actix-session = {version = "0.9.0", features = ["cookie-session"]}
tokio = { version = "1.10.0", features = ["full"] }
tracing-actix-web = "0.7.5"
envy = "0.4.2"
tracing = { version = "0.1.37", features = ["log"] }
tracing-bunyan-formatter = "0.3.8"
tracing-log = "0.2.0"
tracing-subscriber = { version = "0.3.17", features = ["env-filter"] }

[dev-dependencies]
claims = "0.7.1"
fake = "2.6.1"
quickcheck = "1.0.3"
quickcheck_macros = "1.0.0"
